src/objects/ArmPatient__c.object
<CustomObject>
    <fields>
        <fullName>Arm_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arm Id</label>
        <referenceTo>Arm__c</referenceTo>
        <relationshipLabel>ArmPatients</relationshipLabel>
        <relationshipName>ArmPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Id</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>ArmPatients</relationshipLabel>
        <relationshipName>ArmPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject_Id__c</fullName>
        <formula>TrialPatient__r.Subject_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>ArmPatients</relationshipLabel>
        <relationshipName>ArmPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>assignedToPatient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignedToPatient</label>
        <type>Checkbox</type>
    </fields>
    <label>ArmPatient</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Arm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ArmPatients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>